deployment-d.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-d
  labels:
    app: service-d
    service: service-d
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: service-d
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-d
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: service-d
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: service-d
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/sleep/tls
          name: secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: sleep-secret
          optional: true
---
