deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: atest1
spec:
  selector:
    matchLabels:
      app: service-b
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: service-b
        version: v1
    spec:
      containers:
        - name: service-b
          image: nicholasjackson/fake-service:v0.7.1
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: service-b-service
  namespace: atest1
spec:
  selector:
    app: service-b
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: service-b
  namespace: atest1
spec:
  to:
    kind: Service
    name: service-b-service
  port:
    targetPort: 9090
