ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - service-a-service.ocp.com
    - service-b-service.ocp.com
    - service-c-service.ocp.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-virtual-service
spec:
  hosts:
    - service-a-service.ocp.com
    - service-b-service.ocp.com
    - service-c-service.ocp.com
  gateways:
    - ingress-gateway
  http:
    - match:
        - headers:
            host:
              exact: service-a-service.ocp.com
          ignoreUriCase: true
      route:
        - destination:
            host: service-a-service
    - match:
        - headers:
            host:
              exact: service-b-service.ocp.com
          ignoreUriCase: true
      route:
        - destination:
            host: service-b-service
    - match:
        - headers:
            host:
              exact: service-c-service.ocp.com
          ignoreUriCase: true
      route:
        - destination:
            host: service-c-service
